--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h2 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 40%;
 }
 ul {
   list-style-type: none;
